# test_manager

./: .clinerules  .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  manage.py  mcp_server.py  nginx.conf  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
docker/: nginx.conf
misc/: sample_data.csv
test_data/: cases.csv  projects.csv  steps.csv  suites.csv
test_manager/: admin.py  api.py  asgi.py  forms.py  mixins.py  models.py  serializers.py  settings.py  urls.py  views.py  views_csv.py  wsgi.py
test_manager/migrations/: 0001_initial.py  0002_remove_testsession_available_suites.py
test_manager/templatetags/: test_manager_extras.py
test_manager/tests/: test_auth_views.py  test_case_api.py  test_case_views.py  test_execution_views.py  test_forms.py  test_models.py  test_project_api.py  test_project_views.py  test_session_api.py  test_session_views.py  test_suite_views.py  test_views_csv.py
test_tracking/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py  views_csv.py
test_tracking/migrations/: 0001_initial.py  0002_alter_project_options.py  0003_remove_testcase_expected_result_and_more.py  0004_change_testrun_relation_to_project.py  0005_alter_testrun_environment_alter_testrun_executed_by.py  0006_alter_project_name_alter_testcase_unique_together_and_more.py  0007_remove_testexecution_test_run_testiteration_and_more.py  0008_rename_test_iteration_to_test_session.py  0009_rename_actual_result_to_result_detail.py  0010_update_result_detail_verbose_name.py  (+1 more)
(+70 files in other folders)
